    when read beyond eof). (Andrey Klochkov, eli via eli)

    HADOOP-8606. FileSystem.get may return the wrong filesystem (Daryn Sharp 
    via bobby)

    HDFS-2751. Backport: Datanode may incorrectly drop OS cache behind reads
    even for short reads.  (Brandon Li via szetszwo)

    HDFS-3727. When using SPNEGO, NN should not try to log in using KSSL
    principal. (atm)

Release 1.1.0 - unreleased

  INCOMPATIBLE CHANGES

    HDFS-3044. fsck move should be non-destructive by default.
    (Colin Patrick McCabe via eli)

    HADOOP-8230. Enable sync by default and disable append. (eli)

    HADOOP-8365. Provide ability to disable working sync. (eli)

    HADOOP-8552. Conflict: Same security.log.file for multiple users. 
    (kkambatl via tucu)
    
  NEW FEATURES

    MAPREDUCE-3118. Backport Gridmix and Rumen features to
    branch-0.20-security (Ravi Gummadi via amarrk)

    HADOOP-7806. Support binding to sub-interfaces. (harsh, eli via eli)

    HDFS-3150. Add option for clients to contact DNs via hostname. (eli)

    HDFS-3148. The client should be able to use multiple local interfaces
    for data transfer. (eli)

    HDFS-3055. Implement recovery mode (Colin Patrick McCabe via todd)

    HADOOP-8209. Add option to relax build-version check for branch-1. (eli)

    HDFS-3518. Add a utility method DistributedFileSystem.isHealthy(uri) for
    checking if the given HDFS is healthy. (szetszwo)

  IMPROVEMENTS

    MAPREDUCE-3597. [Rumen] Provide a way to access other info of history file
    from Rumen tool. (ravigummadi)

    MAPREDUCE-2517. Add system tests to Gridmix. (Vinay Thota via amarrk)

    MAPREDUCE-3008. [Gridmix] Improve cumulative CPU usage emulation for
    short running tasks. (amarrk)

    MAPREDUCE-2836. Provide option to fail jobs when submitted to
    non-existent fair scheduler pools. (Ahmed Radwan via todd)

    HDFS-2332. Add test for HADOOP-7629 (using an immutable FsPermission
    object as an RPC parameter fails). (todd)
